--- a/database-demo/src/main/resources/application.properties
+++ b/database-demo/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.jpa.repositories.bootstrap-mode=default
+spring.h2.console.enabled=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC-4
