--- a/web-application-demo/pom.xml
+++ b/web-application-demo/pom.xml
@@ -14,6 +14,20 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.3.19</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat -->
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat</artifactId>
+            <version>9.0.62</version>
+            <type>pom</type>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -28,15 +42,6 @@
                         <source>1.8</source>
                         <target>1.8</target>
                         <showWarnings>true</showWarnings>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.tomcat.maven</groupId>
-                    <artifactId>tomcat7-maven-plugin</artifactId>
-                    <version>2.2</version>
-                    <configuration>
-                        <path>/</path>
-                        <contextReloadable>true</contextReloadable>
                     </configuration>
                 </plugin>
             </plugins>
