--- a/web-application-demo/pom.xml
+++ b/web-application-demo/pom.xml
@@ -27,6 +27,12 @@
             <version>9.0.62</version>
             <type>pom</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 
     </dependencies>
 
